<resources>
    <string name="app_name">MataLelaki</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_splash">EventsDetail</string>
    <string name="action_settings">Settings</string>
    <string name="tab_list">Events List</string>
    <string name="tab_map">Event Map</string>
    <string name="telephone">Telephone</string>
    <string name="email">E-mail</string>
    <string name="title_activity_web_view">Web</string>
    <string name="title_activity_events_list">Events List</string>
    <string name="mtLabel">MT</string>
    <string name="distanceLabel">DISTANCE</string>
    <string name="actDistance">1,5 km</string>
    <string name="minDistance">0 mt</string>
    <string name="maxDistance">10 km</string>
    <string name="writeHere">Write here...</string>
    <string name="search">Search</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="take_me_there">TAKE ME THERE</string>
    <string name="description">DESCRIPTION</string>
    <string name="info">INFO</string>
    <string name="address">ADDRESS</string>
    <string name="days">DAYS</string>
    <string name="title_activity_armap">Map</string>
    <string name="helpDescr1">Search events by name or by address</string>
    <string name="helpDescr2">The full events list. Geo-located order based on your position.</string>
    <string name="helpDescr3">Explore Events and contents with the map</string>
    <string name="helpTitle">Info</string>ß
    <string name="startButton">Start Visit</string>
    <string name="exit">Exit</string>
    <string name="exit_question">Are you sure you want to exit application?</string>
    <string name="cancel">Cancel</string>
    <string name="adUnitId">asd</string>

    <string name="admob_interstitial"><!-- PLACE YOUR ADMOB UNIT ID HERE--></string>
    <string name="admob_banner_home"><!-- PLACE YOUR ADMOB UNIT ID HERE--></string>
    <string name="admob_banner_detailview"><!-- PLACE YOUR ADMOB UNIT ID HERE--></string>
    <string name="admob_banner_webview"><!-- PLACE YOUR ADMOB UNIT ID HERE--></string>
    <!-- DATA JSON API URL -->
    <string name="json_url">http://api.mantheqabaidha.com/api/events</string>
    <string name="json_url_notif">http://api.mantheqabaidha.com/api/event</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_radio">RadioActivity</string>
</resources>
