<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".EventDetailsActivity"
    android:background="@color/activity_background_color"
    android:orientation="vertical" >

	<!-- TOP BAR -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/top_bar_height"
		android:orientation="horizontal" >

		<LinearLayout
			android:id="@+id/topBar"
			android:layout_width="fill_parent"
			android:layout_height="match_parent"
			android:layout_margin="0dp"
			android:padding="0dp"
			android:orientation="vertical"
			android:background="@color/main_color">

            <!-- ACTIVITY TITLE -->
			<TextView
				android:layout_width="match_parent"
				android:layout_height="@dimen/top_bar_title_height"
				android:gravity="center"
                android:paddingRight="@dimen/top_bar_height"
				android:textColor="@color/bar_title_color"
				android:id="@+id/barTitle" />

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:orientation="horizontal"
				android:background="@color/light_main_color"
				android:id="@+id/barInputRow">

                <!-- BACK BUTTON -->
				<ImageButton
					android:id="@+id/buttonBack"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_action_back"
					android:background="@drawable/button_default" />

                <!-- TAKE ME THERE BUTTON -->
				<Button
					android:id="@+id/buttonTakeMeThere"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:text="@string/take_me_there"
					android:textColor="@color/dark_grey_color"
					android:textSize="@dimen/top_bar_input_text_size"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_alignParentRight="true"
					android:background="@drawable/button_default" />

			</RelativeLayout>

		</LinearLayout>
	</LinearLayout>
    <!-- END TOP BAR -->

    <!-- HEADER VIEW -->
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/detail_header_height" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="60dp"
	        android:orientation="vertical" >

            <!-- EVENT TITLE -->
	        <TextView
	            android:id="@+id/titleRow"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:singleLine="true"
        		android:scrollHorizontally="true"
		        android:ellipsize="marquee"
	            android:textColor="@color/main_color"
	            android:layout_marginTop="2dp"
	            android:layout_marginRight="20dp"
	            android:textSize="@dimen/title_event_size" />

            <!-- EVENT SHORT DESCRIPTION -->
	        <TextView
	            android:id="@+id/subtitleRow"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:layout_marginTop="2dp"
	            android:singleLine="false"
		        android:ellipsize="marquee"
                android:maxLines="2"
        		android:scrollHorizontally="true"
	            android:layout_marginRight="20dp"
	            android:textColor="@color/grey_color"
	            android:textSize="@dimen/address_event_size" />
	
	        <FrameLayout
	            android:layout_width="160dp"
	            android:layout_height="1dp"
		        android:layout_marginTop="4dp"
	            android:layout_marginLeft="20dp"
				android:background="@color/light_grey_color" >
	        </FrameLayout>

            <!-- INFO -->
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:layout_marginTop="4dp"
		        android:layout_marginRight="20dp" >
	
		        <TextView
		            android:id="@+id/infoLabel"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingLeft="20dp"
		            android:paddingRight="5dp"
		            android:singleLine="true"
		            android:text="@string/info"
		            android:textColor="@color/main_color"
		            android:textSize="@dimen/distance_label_size" />
	
		        <TextView
		            android:id="@+id/infoTextView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingLeft="5dp"
		            android:paddingRight="5dp"
		            android:singleLine="true"
					android:clickable="true"
		            android:textColor="@color/grey_color"
		            android:textSize="@dimen/address_event_size" />
	        
	        </LinearLayout>

            <!-- ADDRESS -->
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:layout_marginRight="20dp" >
	
		        <TextView
		            android:id="@+id/addressRowLabel"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingLeft="20dp"
		            android:paddingRight="5dp"
		            android:singleLine="true"
		            android:text="@string/address"
		            android:textColor="@color/main_color"
		            android:textSize="@dimen/distance_label_size" />
	
		        <TextView
		            android:id="@+id/addressRow"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingLeft="5dp"
		            android:paddingRight="5dp"
		            android:singleLine="true"
		            android:textColor="@color/grey_color"
		            android:textSize="@dimen/address_event_size" />
		        
	        </LinearLayout>
	        
	    </LinearLayout>

        <!-- DISTANCE LEFT AREA -->
	    <LinearLayout
	        android:layout_width="@dimen/item_vertical_separator_margin"
	        android:layout_height="fill_parent"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:orientation="vertical"
	        android:background="@drawable/detail_distance_box" >
	
	        <TextView
	            android:id="@+id/distanceLabel"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="3dp"
	            android:layout_marginRight="3dp"
	            android:layout_marginBottom="3dp"
	            android:layout_marginTop="6dp"
	            android:gravity="center"
	            android:textSize="@dimen/distance_label_size"
	            android:textColor="@color/main_color"
	            android:text="@string/distanceLabel" />
	
	        <FrameLayout
	            android:layout_width="25dp"
	            android:layout_height="1dp"
				android:layout_gravity="center"
				android:background="@color/light_grey_color" >
	        </FrameLayout>

            <!-- DISTANCE VALUE -->
	        <TextView
	            android:id="@+id/mtValueLabel"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:textSize="@dimen/distance_value_size"
	            android:layout_margin="3dp"
	            android:textColor="@color/black_color"
	            android:text="123" />
	
	        <TextView
	            android:id="@+id/mtLabel"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:textSize="@dimen/unit_label_size"
	            android:textColor="#666"
	            android:text="@string/mtLabel" />
	
	        <FrameLayout
	            android:layout_width="25dp"
	            android:layout_height="1dp"
				android:layout_gravity="center"
				android:background="@color/light_grey_color"
				android:layout_margin="4dp" >
	        </FrameLayout>
	
	    </LinearLayout>
	
	</RelativeLayout>

    <!-- DAYS AREA -->
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="6dp"
	    android:paddingTop="6dp"
	    android:background="@drawable/detail_date_box" >
		
		<TextView
			android:id="@+id/days"
			android:layout_width="69dp"
			android:gravity="center"
            android:layout_gravity="center_vertical"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:text="@string/days"
			android:textColor="@color/main_color"
			android:textSize="@dimen/date_event_size" />
	
	    <FrameLayout
			android:layout_width="1dp"
			android:layout_height="20sp"
			android:layout_gravity="center"
			android:background="@color/light_grey_color" >
	   	</FrameLayout>

        <!-- DATE VALUE -->
		<TextView
			android:id="@+id/dateTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			android:singleLine="false"
			android:maxLines="2"
			android:text="8"
			android:textColor="@color/grey_color"
			android:textSize="@dimen/date_event_size" />
	
	    <FrameLayout
			android:layout_width="1dp"
			android:layout_height="20sp"
			android:layout_gravity="center"
			android:background="@color/light_grey_color" >
	   	</FrameLayout>
	    
	</LinearLayout>

    <!-- DESCRIPTION SCROLL TEXTVIEW -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
		android:layout_weight="1">

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="wrap_content" />

    </ScrollView>

	<com.google.android.gms.ads.AdView
		android:id="@+id/adView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		ads:adSize="BANNER"
		ads:adUnitId="@string/admob_banner_detailview">
	</com.google.android.gms.ads.AdView>

</LinearLayout>